  14.3.0   E norm -b, norm -i      gain -B, gain -en       2010-06-14
  14.3.0   E filter                ~=sinc                  2010-06-14
  14.1.0   E resample alias        rate                    2010-06-14
  14.1.0   E polyphase alias       rate                    2010-06-14
  14.1.0   E rabbit alias          rate                    2010-06-14

LibSoX interface changes:

  None.

File formats:

  o New Grandstream ring-tone (gsrt) format.  (robs)
  o CVSD encode/decode speed-ups.  (Kimberly Rockwell, P. Chaintreuil)

Audio device drivers:

  o Add native windows audio driver. (Pavel Karneliuk, Doug Cook)
  o Try default ALSA record encoding parameters if those given
    are invalid (would previously fail).  (robs)

Effects:

  o Fix [2254919] silence doesn't trim digital silence correctly.  (robs)

Other new features:

  o Added libSoX example #4: concatenating audio files.  (robs)
  o Show soxi version & usage information when no args given.  (robs)

Other bug fixes:

  o Fix build so that grouped files (e.g. play -r 6k "*.vox" plays all
    at 6k) works.  (robs)
  o Fix build to support auto file type detection with pipes on FreeBSD
    and elsewhere.  (Dan Nelson)
  o Fix simultaneous play & rec not working.  (robs)
  o Fix multi-threading bug on Windows OS; also, change default to
    single-threaded.
  o Fix mistaken file size with pipe input on Windows.  (Doug Cook)
  o Fix missing documentation for -R (repeatable).  (robs)
  o Fix memory leak of format private data.  (Slawomir Testowy)

Internal improvements:

  None.


sox-14.3.0	2009-06-14
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]
  ated in  [F(ormat)] [E(ffect)]   Replacement
  -------  ----------------------  ----------------------
  14.1.0   E resample *            ~= rate
  14.1.0   E polyphase *           ~= rate
  14.1.0   E rabbit *              ~= rate
  14.2.0   E dither: RPDF,scaled   dither (TPDF only)